# archlinux-pacman

./: Test.hs  archlinux-pacman.cabal
Codec/Archive/Tar/: Util.hs
Distribution/Archlinux/: Package.hs  PackageDescription.hs
Distribution/Archlinux/PackageInfo/: Parse.hs
Test/Distribution/Archlinux/: PackageDescription.hs
Test/Distribution/Archlinux/Package/: Parse.hs
fixture/PKGINFO/: sample_01.txt
