Name:                archlinux-pacman
Version:             0.1.0
Homepage:            http://www.github.com/sebnow/archlinux-pacman-haskell
License:             MIT
License-file:        LICENSE
Author:              Sebastian Nowicki
Maintainer:          sebnow@gmail.com
Category:            Distribution, System
Build-type:          Simple
Cabal-version:       >=1.9.2
Synopsis:            Pacman package and database parsing library

Source-Repository head
    type:     git
    location: git://github.com/sebnow/archlinux-pacman.git

Library
    exposed-modules:
        Distribution.Archlinux.Package
        Distribution.Archlinux.PackageDescription
        Distribution.Archlinux.PackageInfo.Parse
    other-modules:
        Codec.Archive.Tar.Util
    build-depends:
        attoparsec >= 0.8 && < 0.10,
        base >= 4 && < 6,
        bytestring >= 0.9 && < 0.11,
        Cabal >= 1.9.2 && < 1.11,
        mtl >= 2.0 && < 2.2,
        tar == 0.3.*

test-suite test-package
    type:          exitcode-stdio-1.0
    main-is:       Test.hs
    build-depends:
        attoparsec >= 0.8 && < 0.10,
        base >= 4 && < 6,
        Cabal >= 1.9.2 && < 1.11,
        bytestring >= 0.9 && < 0.11,
        HUnit >= 1.2.2 && < 1.2.4,
        mtl >= 2.0 && < 2.2,
        QuickCheck >= 2.4 && < 2.6,
        test-framework >= 0.3 && < 0.5,
        test-framework-hunit >= 0.2 && < 0.4,
        test-framework-quickcheck2 >= 0.2 && < 0.4

